<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:shrinkColumns="0"
    android:stretchColumns="1"
    tools:context="br.univel.exemplolayoutandroid.MainActivity" >

    <TableRow
        android:id="@+id/tblRowNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/txtNome"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintNome" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tblRowSobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblSobrenome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobrenome" />

        <EditText
            android:id="@+id/txtSobrenome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintSobrenome" />
    </TableRow>

    <TableRow
        android:id="@+id/tblRowIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idade" />

        <EditText
            android:id="@+id/txtIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintIdade"
            android:inputType="number"
            android:maxLength="2" />
    </TableRow>

    <TableRow
        android:id="@+id/tblRowSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo" />

        <Spinner
            android:id="@+id/spnSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="acaoCancelar"
            android:text="@string/botaoCancelar" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="acaoCadastrar"
            android:text="@string/botaoCadastrar" />
    </LinearLayout>

</TableLayout>